--- a/mnt/assignment2/PyTorch.ipynb
+++ b/mnt/assignment2/PyTorch.ipynb
@@ -189,45 +189,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.return_types.max(\n",
-       "values=tensor([[  3,  30],\n",
-       "        [ 11,  60],\n",
-       "        [ 12,  90],\n",
-       "        [ 10, 120]]),\n",
-       "indices=tensor([[1, 2],\n",
-       "        [1, 2],\n",
-       "        [0, 2],\n",
-       "        [0, 2]]))"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = torch.tensor([\n",
-    "    [[1, 10], [3, 20], [2, 30]], \n",
-    "    [[4, 40], [11, 50], [6, 60]],\n",
-    "    [[12, 70], [8, 80], [9, 90]],\n",
-    "    [[10, 100], [6, 110], [7, 120]]\n",
-    "])\n",
-    "\n",
-    "# a = torch.tensor([\n",
-    "#     [1,2,3],\n",
-    "#     [4,5,6]\n",
-    "# ])\n",
-    "torch.max(a, 1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {
     "scrolled": true
@@ -481,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 138,
    "metadata": {
     "scrolled": true
    },
@@ -490,7 +451,7 @@
     "# Learning rate annealing\n",
     "# Reduce your learning rate 2x every 2 epochs\n",
     "\n",
-    "def train_model(model, train_loader, val_loader, loss, optimizer, scheduler, num_epochs, verbosity=0):    \n",
+    "def train_model(model, train_loader, val_loader, loss, optimizer, scheduler=None, num_epochs=10, verbosity=0):    \n",
     "    loss_history = []\n",
     "    train_history = []\n",
     "    val_history = []\n",
@@ -501,7 +462,7 @@
     "            if epoch > 0:\n",
     "                print('')\n",
     "            \n",
-    "            print('Epoch #%s, optimizer state: %s' % (epoch, optimizer.state_dict()))\n",
+    "            print('Epoch #%s - optimizer state: %s' % (epoch, optimizer.state_dict()))\n",
     "        \n",
     "        loss_accum = 0\n",
     "        correct_samples = 0\n",
@@ -523,14 +484,15 @@
     "        train_accuracy = float(correct_samples) / total_samples\n",
     "        val_accuracy = compute_accuracy(model, val_loader)\n",
     "        \n",
-    "        scheduler.step()\n",
+    "        if scheduler is not None:\n",
+    "            scheduler.step()\n",
     "        \n",
     "        loss_history.append(float(ave_loss))\n",
     "        train_history.append(train_accuracy)\n",
     "        val_history.append(val_accuracy)\n",
     "        \n",
     "        if verbosity >= 1:\n",
-    "            print(\"Average loss: %f, Train accuracy: %f, Val accuracy: %f\" % (ave_loss, train_accuracy, val_accuracy))\n",
+    "            print(\"Epoch #%s - Average loss: %f, Train accuracy: %f, Val accuracy: %f\" % (epoch, ave_loss, train_accuracy, val_accuracy))\n",
     "        \n",
     "    return loss_history, train_history, val_history"
    ]
@@ -868,14 +830,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #0 - Average loss: 1.326673, Train accuracy: 0.570078, Val accuracy: 0.697154\n",
+      "Epoch #1 - Average loss: 0.935434, Train accuracy: 0.707811, Val accuracy: 0.744045\n",
+      "Epoch #2 - Average loss: 0.822962, Train accuracy: 0.741852, Val accuracy: 0.767183\n",
+      "Epoch #3 - Average loss: 0.750676, Train accuracy: 0.765638, Val accuracy: 0.790048\n",
+      "Epoch #4 - Average loss: 0.705873, Train accuracy: 0.779971, Val accuracy: 0.801993\n",
+      "Epoch #5 - Average loss: 0.678070, Train accuracy: 0.788196, Val accuracy: 0.797829\n",
+      "Epoch #6 - Average loss: 0.653645, Train accuracy: 0.795704, Val accuracy: 0.805747\n",
+      "Epoch #7 - Average loss: 0.632030, Train accuracy: 0.803570, Val accuracy: 0.803631\n",
+      "Epoch #8 - Average loss: 0.617863, Train accuracy: 0.807682, Val accuracy: 0.808682\n",
+      "Epoch #9 - Average loss: 0.599184, Train accuracy: 0.814251, Val accuracy: 0.818647\n",
+      "Epoch #10 - Average loss: 0.590375, Train accuracy: 0.814353, Val accuracy: 0.823766\n",
+      "Epoch #11 - Average loss: 0.574252, Train accuracy: 0.820240, Val accuracy: 0.818033\n",
+      "Epoch #12 - Average loss: 0.574112, Train accuracy: 0.819234, Val accuracy: 0.825268\n",
+      "Epoch #13 - Average loss: 0.567203, Train accuracy: 0.821213, Val accuracy: 0.815507\n",
+      "Epoch #14 - Average loss: 0.554999, Train accuracy: 0.825939, Val accuracy: 0.811549\n",
+      "Epoch #15 - Average loss: 0.548886, Train accuracy: 0.827594, Val accuracy: 0.823220\n",
+      "Epoch #16 - Average loss: 0.540990, Train accuracy: 0.829506, Val accuracy: 0.815371\n",
+      "Epoch #17 - Average loss: 0.536110, Train accuracy: 0.832372, Val accuracy: 0.824790\n",
+      "Epoch #18 - Average loss: 0.531552, Train accuracy: 0.834915, Val accuracy: 0.827111\n",
+      "Epoch #19 - Average loss: 0.527164, Train accuracy: 0.833191, Val accuracy: 0.817623\n",
+      "Epoch #20 - Average loss: 0.520700, Train accuracy: 0.836024, Val accuracy: 0.829704\n",
+      "Epoch #21 - Average loss: 0.518593, Train accuracy: 0.837798, Val accuracy: 0.831070\n",
+      "Epoch #22 - Average loss: 0.513269, Train accuracy: 0.838071, Val accuracy: 0.829909\n",
+      "Epoch #23 - Average loss: 0.510403, Train accuracy: 0.839010, Val accuracy: 0.836189\n",
+      "Epoch #24 - Average loss: 0.507612, Train accuracy: 0.840477, Val accuracy: 0.834755\n",
+      "Epoch #25 - Average loss: 0.500597, Train accuracy: 0.841279, Val accuracy: 0.839806\n",
+      "Epoch #26 - Average loss: 0.508847, Train accuracy: 0.839641, Val accuracy: 0.835028\n",
+      "Epoch #27 - Average loss: 0.497522, Train accuracy: 0.843207, Val accuracy: 0.830182\n",
+      "Epoch #28 - Average loss: 0.497170, Train accuracy: 0.844146, Val accuracy: 0.835916\n",
+      "Epoch #29 - Average loss: 0.493135, Train accuracy: 0.844231, Val accuracy: 0.828203\n",
+      "CPU times: user 43min 27s, sys: 1h 41min 4s, total: 2h 24min 31s\n",
+      "Wall time: 18min 6s\n"
+     ]
+    }
+   ],
    "source": [
-    "# Experiment here!"
+    "import math\n",
+    "\n",
+    "batch_size = 64\n",
+    "\n",
+    "layer1 = 100\n",
+    "layer2 = 100\n",
+    "\n",
+    "learning_rate = 1e-3\n",
+    "reg_strength = 1e-4\n",
+    "\n",
+    "epochs = 30\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(data_train, batch_size=batch_size, sampler=train_sampler)\n",
+    "val_loader = torch.utils.data.DataLoader(data_train, batch_size=batch_size, sampler=val_sampler)\n",
+    "\n",
+    "nn_model = nn.Sequential(\n",
+    "    Flattener(),\n",
+    "    \n",
+    "    nn.Linear(3*32*32, layer1),    \n",
+    "    nn.ReLU(inplace=True),\n",
+    "    nn.BatchNorm1d(layer1),\n",
+    "    \n",
+    "    nn.Linear(layer1, layer2),\n",
+    "    nn.ReLU(inplace=True),\n",
+    "    nn.BatchNorm1d(layer2),\n",
+    "    \n",
+    "    nn.Linear(layer2, 10)\n",
+    ")\n",
+    "nn_model.type(torch.FloatTensor)\n",
+    "\n",
+    "optimizer = optim.Adam(nn_model.parameters(), lr=learning_rate, weight_decay=reg_strength)\n",
+    "# scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, factor=0.333, patience=3, verbose=True)\n",
+    "scheduler = None\n",
+    "%time loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, optimizer, scheduler, num_epochs=epochs, verbosity=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
