--- a/mnt/assignment3/CNN.ipynb
+++ b/mnt/assignment3/CNN.ipynb
@@ -13,32 +13,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import importlib\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
+    "%config InlineBackend.figure_format = 'retina'\n",
     "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "# %load_ext autoreload\n",
+    "# %autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataset import load_svhn, random_split_train_val\n",
-    "from gradient_check import check_layer_gradient, check_layer_param_gradient, check_model_gradient\n",
-    "from layers import FullyConnectedLayer, ReLULayer, ConvolutionalLayer, MaxPoolingLayer, Flattener\n",
-    "from model import ConvNet\n",
-    "from trainer import Trainer, Dataset\n",
-    "from optim import SGD, MomentumSGD\n",
-    "from metrics import multiclass_accuracy"
+    "import dataset\n",
+    "import gradient_check\n",
+    "import layers\n",
+    "import model\n",
+    "import trainer\n",
+    "import optim\n",
+    "import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from dataset import load_svhn, random_split_train_val\n",
+    "# from gradient_check import check_layer_gradient, check_layer_param_gradient, check_model_gradient\n",
+    "# from layers import FullyConnectedLayer, ReLULayer, ConvolutionalLayer, MaxPoolingLayer, Flattener\n",
+    "# from model import ConvNet\n",
+    "# from trainer import Trainer, Dataset\n",
+    "# from optim import SGD, MomentumSGD\n",
+    "# from metrics import multiclass_accuracy"
    ]
   },
   {
@@ -52,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,16 +79,16 @@
     "    test_X = test_X.astype(np.float) / 255.0\n",
     "    \n",
     "    # Subtract mean\n",
-    "    mean_image = np.mean(train_X, axis = 0)\n",
+    "    mean_image = np.mean(train_X, axis=0)\n",
     "    train_X -= mean_image\n",
     "    test_X -= mean_image\n",
     "    \n",
     "    return train_X, test_X\n",
     "    \n",
-    "train_X, train_y, test_X, test_y = load_svhn(\"data\", max_train=10000, max_test=1000)    \n",
+    "train_X, train_y, test_X, test_y = dataset.load_svhn(\"data\", max_train=10000, max_test=1000)    \n",
     "train_X, test_X = prepare_for_neural_network(train_X, test_X)\n",
     "# Split train into train and val\n",
-    "train_X, train_y, val_X, val_y = random_split_train_val(train_X, train_y, num_val = 1000)"
+    "train_X, train_y, val_X, val_y = dataset.random_split_train_val(train_X, train_y, num_val=1000)"
    ]
   },
   {
@@ -110,13 +128,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X: (2, 2, 2, 1)\n",
+      "Shape of W (2, 2, 1, 1)\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Implement ConvolutionaLayer that supports only 1 output and input channel\n",
+    "# importlib.reload(layers)\n",
+    "\n",
+    "# Implement ConvolutionalLayer that supports only 1 output and input channel\n",
     "\n",
     "# Note: now you're working with images, so X is 4-dimensional tensor of\n",
     "# (batch_size, height, width, channels)\n",
@@ -136,7 +163,7 @@
     "# Batch of 2 images of dimensions 2x2 with a single channel\n",
     "print(\"Shape of X:\",X.shape)\n",
     "\n",
-    "layer = ConvolutionalLayer(in_channels=1, out_channels=1, filter_size=2, padding=0)\n",
+    "layer = layers.ConvolutionalLayer(in_channels=1, out_channels=1, filter_size=2, padding=0)\n",
     "print(\"Shape of W\", layer.W.value.shape)\n",
     "layer.W.value = np.zeros_like(layer.W.value)\n",
     "layer.W.value[0, 0, 0, 0] = 1.0\n",
@@ -144,15 +171,37 @@
     "result = layer.forward(X)\n",
     "\n",
     "assert result.shape == (2, 1, 1, 1)\n",
-    "assert np.all(result == X[:, :1, :1, :1] +1), \"result: %s, X: %s\" % (result, X[:, :1, :1, :1])\n",
-    "\n",
-    "\n",
+    "assert np.all(result == X[:, :1, :1, :1] +1), \"result: %s, X: %s\" % (result, X[:, :1, :1, :1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Now let's implement multiple output channels\n",
-    "layer = ConvolutionalLayer(in_channels=1, out_channels=2, filter_size=2, padding=0)\n",
+    "layer = layers.ConvolutionalLayer(in_channels=1, out_channels=2, filter_size=2, padding=0)\n",
     "result = layer.forward(X)\n",
-    "assert result.shape == (2, 1, 1, 2)\n",
-    "\n",
-    "\n",
+    "assert result.shape == (2, 1, 1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X: (2, 2, 2, 2)\n"
+     ]
+    }
+   ],
+   "source": [
     "# And now multple input channels!\n",
     "X = np.array([\n",
     "              [\n",
@@ -167,7 +216,7 @@
     "             ])\n",
     "\n",
     "print(\"Shape of X:\", X.shape)\n",
-    "layer = ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=2, padding=0)\n",
+    "layer = layers.ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=2, padding=0)\n",
     "result = layer.forward(X)\n",
     "assert result.shape == (2, 1, 1, 2)"
    ]
@@ -185,27 +234,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient check passed!\n",
+      "Gradient check passed!\n",
+      "Gradient check passed!\n"
+     ]
+    }
+   ],
    "source": [
+    "# importlib.reload(layers)\n",
+    "# importlib.reload(gradient_check)\n",
+    "\n",
     "# First test - check the shape is right\n",
-    "layer = ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=2, padding=0)\n",
+    "layer = layers.ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=2, padding=0)\n",
     "result = layer.forward(X)\n",
     "d_input = layer.backward(np.ones_like(result))\n",
     "assert d_input.shape == X.shape\n",
     "\n",
     "# Actually test the backward pass\n",
     "# As usual, you'll need to copy gradient check code from the previous assignment\n",
-    "layer = ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=2, padding=0)\n",
-    "assert check_layer_gradient(layer, X)\n",
+    "layer = layers.ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=2, padding=0)\n",
+    "assert gradient_check.check_layer_gradient(layer, X)\n",
     "\n",
-    "layer = ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=2, padding=0)\n",
-    "assert check_layer_param_gradient(layer, X, 'W')\n",
-    "layer = ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=2, padding=0)\n",
-    "assert check_layer_param_gradient(layer, X, 'B')"
+    "layer = layers.ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=2, padding=0)\n",
+    "assert gradient_check.check_layer_param_gradient(layer, X, 'W')\n",
+    "layer = layers.ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=2, padding=0)\n",
+    "assert gradient_check.check_layer_param_gradient(layer, X, 'B')"
    ]
   },
   {
@@ -218,19 +280,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "layer = ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=3, padding=1)\n",
+    "importlib.reload(layers)\n",
+    "\n",
+    "layer = layers.ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=3, padding=1)\n",
     "result = layer.forward(X)\n",
     "# Note this kind of layer produces the same dimensions as input\n",
     "assert result.shape == X.shape,\"Result shape: %s - Expected shape %s\" % (result.shape, X.shape)\n",
     "d_input = layer.backward(np.ones_like(result))\n",
     "assert d_input.shape == X.shape\n",
-    "layer = ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=3, padding=1)\n",
+    "\n",
+    "layer = layers.ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=3, padding=1)\n",
     "assert check_layer_gradient(layer, X)"
    ]
   },
@@ -426,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
