--- a/mnt/assignment3/CNN.ipynb
+++ b/mnt/assignment3/CNN.ipynb
@@ -280,32 +280,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3,)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.array([1,2,3])\n",
-    "a.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient check passed!\n"
+     ]
+    }
+   ],
    "source": [
     "importlib.reload(layers)\n",
     "\n",
@@ -317,7 +304,7 @@
     "assert d_input.shape == X.shape\n",
     "\n",
     "layer = layers.ConvolutionalLayer(in_channels=2, out_channels=2, filter_size=3, padding=1)\n",
-    "assert check_layer_gradient(layer, X)"
+    "assert gradient_check.check_layer_gradient(layer, X)"
    ]
   },
   {
@@ -341,15 +328,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pool = MaxPoolingLayer(2, 2)\n",
+    "a = np.array([[1,3,10], [5,4,6]])\n",
+    "ind = np.unravel_index(np.argmax(a), a.shape)\n",
+    "\n",
+    "print(ind)\n",
+    "a[ind]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient check passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "importlib.reload(layers)\n",
+    "\n",
+    "pool = layers.MaxPoolingLayer(2, 2)\n",
     "result = pool.forward(X)\n",
+    "\n",
     "assert result.shape == (2, 1, 1, 2)\n",
     "\n",
-    "assert check_layer_gradient(pool, X)"
+    "assert gradient_check.check_layer_gradient(pool, X)"
    ]
   },
   {
